# dev-mcp

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
_bmad/: config.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-runnable-secure-global-mcp-server-skeleton.md  1-2-async-git-execution-and-persistence-substrate.md  1-3-create-a-multi-repo-task-happy-path.md  1-4-create-task-cross-repo-rollback-error-safe.md  1-5-list-and-remove-worktrees.md  1-6-update-and-list-tasks-status-lifecycle-and-complete-the-tool-surface.md  2-1-derive-on-read-projection-pure-task-grouped.md  2-2-in-memory-cache-and-background-refresher.md  2-3-read-only-state-endpoint.md  2-4a-static-board-structure-status-encoding.md  2-4b-live-poller-with-diff-and-patch-stable-render.md  2-4c-freshness-degraded-and-empty-states.md  3-1-machine-global-single-instance-protection-with-stale-lock-recovery.md  3-2-server-lifecycle-cli-port-control-stop-graceful-release.md  deferred-work.md  (+3 more)
tests/: conftest.py  test_adapter_seam.py  test_cache.py  test_cli.py  test_concurrency.py  test_dashboard_contrast.py  test_dashboard_overflow.py  test_dashboard_poller.py  test_dashboard_render.py  test_dashboard_state.py  test_dashboard_states.py  test_dashboard_static_lint.py  test_errors.py  test_git_runner.py  test_git_safety.py  test_handlers.py  test_lock.py  test_logging.py  test_middleware_origin.py  test_porcelain.py  test_projection.py  test_server_factory.py  test_slug.py  test_smoke_uvicorn.py  test_store.py  test_tasks.py  test_worktrees.py
(+55 files in other folders)
